<resources>
    <string name="app_name">InspiringPersons</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="quote">Quote</string>
    <string name="lifetime">Lifetime</string>
    <string name="URL_for_persons_photo">URL for person photo</string>
    <string name="Enter_newPersonName">New inspiring person full name</string>
    <string name="successfulSave">New person successfully saved!!</string>
    <string name="badEntry">"You have to enter all information."</string></resources>
